# deno_swc

./: #!.bat  .gitignore  Cargo.toml  LICENSE  Makefile  README.md  call  compress.ts  deno.jsonc  deps.ts  egg.yml  mod.ts  run-prepush.bat  run-prepush.sh
.github/workflows/: ci.yml  dev-ci.yml  e2e-test.yml  release.yml  test.yml
e2e-tests/: deps.ts  extract_dependencies.test.ts  parse.test.ts  print.test.ts
examples/: parse.ts  print.ts  transform.ts
lib/: deno_swc.generated.js
src/: analyzer.rs  ast_parser.rs  lib.rs
swc_core/: Cargo.toml
swc_core/src/: analyzer.rs  ast_parser.rs  bundler.rs  lib.rs  options.rs  parser.rs  printer.rs  transformer.rs
swc_deno/: bundle.ts  deps.ts  extract_dependencies.ts  get_local_dependencies.ts  mod.ts  parse.ts  print.ts  transform.ts
swc_plugin/: index.ts
swc_wasm/: Cargo.toml  build.js  build.ts  lib.rs
swc_wasm/src/: lib.rs
tests/: analyze_dependencies.test.ts  bundle.test.ts  deps.ts  extract_dependencies.test.ts  get_local_dependencies.test.ts  input.ts  parse.test.ts  print.test.ts  settings.ts  transform.test.ts
tests/test_files/: a.ts  c.ts  f.ts  g.ts  h.ts
tests/test_files/subdir/: d.ts  e.ts
tools/: README.posix.md  README.windows.md  build.sh  dev-test.sh  e2e-test.sh  format-local.sh  format.sh  lint-local.sh  lint.sh  print-version.ts
types/: options.ts  result.ts
