[package]
name = "core"
version = "0.0.1"
authors = ["Divy Srivastava <dj.srivastava23@gmail.com>"]
edition = "2018"
publish = false

[dependencies]
swc = { git = "https://github.com/swc-project/swc", rev = "053f81c" }
swc_ecma_visit = "0.8.0"
swc_ecma_ast = "=0.23.1"
swc_common = "0.6.2"
swc_ecma_parser = "0.27.0"
anyhow = "1.0.31"
