[package]
name = "deno_swc"
version = "0.0.1"
authors = ["Divy Srivastava <dj.srivastava23@gmail.com>"]
edition = "2018"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
wee_alloc = { version = "0.4.5", optional = true }
anyhow = "1.0.42"
console_error_panic_hook = "0.1.6"
once_cell = "1.3.1"
path-clean = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
swc = "0.167.0"
swc_common = { version = "0.17.21", features = [
    "concurrent",
    "sourcemap",
    "perf",
] }
swc_ecmascript = { version = "0.146.0", features = [
    "codegen",
    "minifier",
    "optimization",
    "parser",
    "react",
    "transforms",
    "typescript",
    "utils",
    "visit",
] }
tracing = { version = "0.1.32", features = ["release_max_level_off"] }
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.8"

[profile.release]
lto = true
opt-level = "s"

[features]
default = ["wee_alloc"]
