[package]
name = "deno_swc"
version = "0.0.1"
authors = ["Divy Srivastava <dj.srivastava23@gmail.com>"]
edition = "2018"
publish = false

[lib]
crate_type = ["cdylib"]
path = "lib.rs"

[dependencies]
anyhow = "1.0.42"
wee_alloc = { version = "0.4.5", optional = true }
console_error_panic_hook = "0.1.6"
once_cell = "1.3.1"
path-clean = "0.1"
serde = {version = "1", features = ["derive"]}
serde_json = "1"
swc = { git = "https://github.com/swc-project/swc", rev = "fd3501b" }
swc_ecmascript = { git = "https://github.com/swc-project/swc", rev = "fd3501b" }
swc_common = { git = "https://github.com/swc-project/swc", rev = "fd3501b" }
wasm-bindgen = {version = "0.2", features = ["serde-serialize"]}
wasm-bindgen-futures = "0.4.8"
syn = "1.0.65"
url = "2.2.2"

[features]
default = ["wee_alloc"]

